<b><u> v2.35, 24.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Delete the spell tolerance script.
<font color=#FF8C00>&#9830;</font> Update the quest module to select the quest reward with the highest price.

<b><u> v2.34.1, 23.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Disable the quest module. 

<b><u> v2.34, 23.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Fix an error in UIButtons. #54
<font color=#FF8C00>&#9830;</font> Updates various Skins.
<font color=#FF8C00>&#9830;</font> Update BigWigs profile.
<font color=#FF8C00>&#9830;</font> Add a notification toast frame.
<font color=#FF8C00>&#9830;</font> Add an own CoolDownFlash Frame. Based on DoomCooldownPulse
<font color=#FF8C00>&#9830;</font> Locales updates.
<font color=#FF8C00>&#9830;</font> Update CombatText and put it in an own module.
<font color=#FF8C00>&#9830;</font> Many functions are updated.

<b><u> v2.33, 10.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Create an UIButton Frame. Ported from Shadow&Light.
<font color=#FF8C00>&#9830;</font> Remove the achievement tooltip function, its now blizzard default.
<font color=#FF8C00>&#9830;</font> Install: Change the Player debuff size and position.
<font color=#FF8C00>&#9830;</font> Add an option the set the mover transparent.
<font color=#FF8C00>&#9830;</font> Cleanup Misc modules.
<font color=#FF8C00>&#9830;</font> Cleanup Skin modules.

<b><u> v2.32, 26.03.2017</b></u>
<font color=#FF8C00>&#9830;</font> 7.2 ready
<font color=#FF8C00>&#9830;</font> Add an itemlevel text on the merchant frame.
<font color=#FF8C00>&#9830;</font> ToolTip Icons: Add PVPReward Icon.
<font color=#FF8C00>&#9830;</font> Update TradeSkill Tabs.
<font color=#FF8C00>&#9830;</font> Adds an italian locale file.
<font color=#FF8C00>&#9830;</font> Add Tooltip Icons for BattlePets, Faction, Role and move the config to its own section.
<font color=#FF8C00>&#9830;</font> Change the main texture.

<b><u> v2.31, 14.03.2017</b></u>